scribble/scribble-assertions/src/test/resources/bad/extensions/assrtcore/safety/assrtprog/statevar/AssrtCoreTest15b.scr
module bad.extensions.assrtcore.safety.assrtprog.statevar.AssrtCoreTest15b;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B)
{
	1() from A to B;	
	do Proto2(A, B); @"<4>"  // Tests R update from endpoint state (as opposed to action) -- no: now from action
}

aux global protocol Proto2(role A, role B) @"<x:=3> x=3"  // Unsat if validated as root 
{
	2(y:int) from B to A;  @"(x>3)"
	do Proto2(A, B); @"<3>"  // Uncomment makes Proto1 not assert-prog 
}
//*/
